Fixess the font not showing up

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "OpenRunde", "Helvetica";
+  font-family: "OpenRunde", Helvetica;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,7 +9,7 @@ body {
 
 @font-face {
   font-family: "OpenRunde";
-  src: url("/assets/fonts/OpenRunde-Regular.woff") format("woff");
+  src: url("./assets/fonts/OpenRunde-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -17,7 +17,7 @@ body {
 
 @font-face {
   font-family: "OpenRunde";
-  src: url("/assets/fonts/OpenRunde-Medium.woff") format("woff");
+  src: url("./assets/fonts/OpenRunde-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -25,7 +25,7 @@ body {
 
 @font-face {
   font-family: "OpenRunde";
-  src: url("/assets/fonts/OpenRunde-Semibold.woff") format("woff");
+  src: url("./assets/fonts/OpenRunde-Semibold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -33,7 +33,7 @@ body {
 
 @font-face {
   font-family: "OpenRunde";
-  src: url("/assets/fonts/OpenRunde-Bold.woff") format("woff");
+  src: url("./assets/fonts/OpenRunde-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
